--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <input type="hidden" name="hosted_button_id" value="MWGRA2DZKUNXJ" />
 <input type="image" src="https://www.paypalobjects.com/en_GB/SG/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 <img alt="" border="0" src="https://www.paypal.com/en_SG/i/scr/pixel.gif" width="1" height="1" />
-</form>"<i class="far fa-heart mr-1"></i>Give Me Coffe</a>
+</form>"<i class="far fa-heart mr-1"</i>Give Me Coffe</a>
     </div>
     <div class="container">
       <div class="row">
@@ -38,7 +38,7 @@
             <p class="about_me">You Will Never Loose Either You Win Or You Learn,You Must Do What Thing You Cannot Do</p>
           <div class="list-group">
             <a class="list" href="https://github.com/anonyart/anonyart.github.io/issues/new?assignees=&labels=invite+me+to+the+organization&template=invitation.md&title=Please+invite+me+to+the+GitHub+Community+Organization">
-              <i class="fas fa-plus"></i>
+              <i class="fas fa-plus" </i>
             Join Our Community
             </a>
             <a class="list" href="https://anonyart.github.io/">
