--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <input type="hidden" name="hosted_button_id" value="MWGRA2DZKUNXJ" />
 <input type="image" src="https://www.paypalobjects.com/en_GB/SG/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 <img alt="" border="0" src="https://www.paypal.com/en_SG/i/scr/pixel.gif" width="1" height="1" />
-</form>"<i class="far fa-heart mr-1"</i>Give Me Coffe</a>
+</form><i class="far fa-heart mr-1</i>Give Me Coffe</a>
     </div>
     <div class="container">
       <div class="row">
