--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
         </label>
     </nav>
     <div class="sponsor_btn text-right pt-3 pr-3">
-      <form action="https://www.paypal.com/donate" method="post" target="_top">
-        <input type="hidden" name="hosted_button_id" value="MWGRA2DZKUNXJ" />
-         <input type="image" src="https://www.paypalobjects.com/en_GB/SG/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-          <img alt="" border="0" src="https://www.paypal.com/en_SG/i/scr/pixel.gif" width="1" height="1" /></form> <i class="far fa-heart mr-1">Give Me Coffe</i>
+      <a href="https://www.paypal.com/donate?hosted_button_id=MWGRA2DZKUNXJ" class="btn btn-outline-secondary px-3"><i class="far fa-heart mr-1"></i>Give Me Coffe</a>
     </div>
     <div class="container">
       <div class="row">
@@ -37,7 +34,7 @@
             <p class="about_me">You Will Never Loose Either You Win Or You Learn,You Must Do What Thing You Cannot Do</p>
           <div class="list-group">
             <a class="list" href="https://github.com/anonyart/anonyart.github.io/issues/new?assignees=&labels=invite+me+to+the+organization&template=invitation.md&title=Please+invite+me+to+the+GitHub+Community+Organization">
-              <i class="fas fa-plus" </i>
+              <i class="fas fa-plus"></i>
             Join Our Community
             </a>
             <a class="list" href="https://anonyart.github.io/">
